compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__aliased_ok_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam.{Ok as Thing}\npub fn main() { Thing }"
---
let
  gleam' = builtins.import ./../gleam.nix;
  Thing = (builtins.import ./../gleam.nix).Ok;
  
  main = {}: Thing;
in { inherit main; }
