compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__error.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "pub fn main() { Error(1) }"
---
let
  inherit (builtins.import ./../gleam.nix) Error;
  
  main = { }: Error 1;
in { inherit main; }
