compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__error_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "pub fn main() { Error }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { Error }

----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) Error;
  
  main = { }: Error;
in
{ inherit main; }
