compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__ok.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "pub fn main() { Ok(1) }"
---
let
  inherit (builtins.import ./../gleam.nix) Ok;
  
  main = { }: Ok 1;
in { inherit main; }
