compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__ok_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "pub fn main() { Ok }"
---
let
  inherit (builtins.import ./../gleam.nix) Ok;
  
  main = { }: Ok;
in { inherit main; }
