compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__qualified_error.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Error(1) }"
---
let
  gleam' = builtins.import ./../gleam.nix;
  
  main = {}: gleam'.Error 1;
in { inherit main; }
