compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__qualified_error_fn.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Error }"
---
let
  gleam' = builtins.import ./../gleam.nix;
  
  main = { }: gleam'.Error;
in
{ inherit main; }
