compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__results__qualified_ok.snap
---
source: compiler-core/src/nix/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Ok(1) }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Ok(1) }

----- COMPILED NIX
let
  gleam' = builtins.import ./../gleam.nix;
  
  main = { }: gleam'.Ok 1;
in
{ inherit main; }
